# clippo-clipboard

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  VERSION.md  deny.toml
.github/: FUNDING.yml  labels.yml  pull_request_template.md
apps/linux/: Cargo.toml  README.md
apps/linux/src/: main.rs
crates/clippo-core/: Cargo.toml
crates/clippo-core/src/: commands.rs  diagnostics.rs  history.rs  lib.rs  lifecycle.rs  localization.rs  onboarding.rs  privacy.rs  search.rs  selection.rs  settings.rs  time_format.rs  types.rs  view_model.rs
crates/clippo-core/tests/: workflow.rs
crates/clippo-persistence/: Cargo.toml
crates/clippo-persistence/src/: lib.rs
crates/clippo-platform/: Cargo.toml
crates/clippo-platform/src/: lib.rs
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  COMMUNITY_FEEDBACK.md  CONTRIBUTOR_SETUP.md  DEFAULT_SETTINGS_REVIEW.md  DEPENDENCIES.md  EXTERNAL_VALIDATION.md  FAQ.md  FEATURE_FLAGS.md  FFI.md  GOVERNANCE.md  INSTALL_UNINSTALL.md  KEYBOARD_SHORTCUTS.md  LIFECYCLE.md  LIMITATIONS.md  LOCALIZATION.md  MIGRATION_MACCY.md  MILESTONES.md  PACKAGING.md  PARITY.md  PASTE_BEHAVIOR.md  PERFORMANCE_TARGETS.md  PERMISSIONS.md  POST_V1_RESEARCH.md  PRIVACY.md  PROJECT_DIRECTION.md  QA.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_SECURITY.md  REPRODUCIBLE_BUILDS.md  ROADMAP_ISSUES.md  SMOKE_TEST_STRATEGY.md  STORAGE.md  SUPPLY_CHAIN.md  TROUBLESHOOTING.md  UI_UX.md  USER_GUIDE_LINUX.md  USER_GUIDE_MACOS.md  USER_GUIDE_WINDOWS.md  WAYLAND.md
i18n/: en-US.json  qps-ploc.json
scripts/: bench.sh  build-linux.sh  build-macos.sh  build-windows.sh  check-accessibility-source.sh  check-doc-links.sh  check-external-validation.sh  check-full-preview-source.sh  check-global-shortcut-source.sh  check-high-contrast-source.sh  check-i18n.sh  check-interaction-source.sh  check-layout-scaling-source.sh  check-maccy-ui-parity-source.sh  check-native-ui-policy.sh  check-popup-positioning-source.sh  check-readme.sh  check-screen-reader-source.sh  check-theme-policy.sh  check-ui-motion.sh  check-validation-evidence.sh  check-validation-runbook.sh  check-workflow-ui-source.sh  check.sh  collect-validation-evidence.sh  export-validation-issues.sh  export-validation-runbook.sh  format.sh  generate-checksums.sh  list-tasks.sh  package-linux-appimage.sh  package-linux-deb.sh  package-linux-flatpak.sh  package-macos.sh  package-preflight.sh  task-status-report.sh  (+2 more)
(+31 files in other folders)
