[workspace]
members = [
  "apps/linux",
  "crates/clippo-core",
  "crates/clippo-platform",
  "crates/clippo-persistence",
  "tools/clippo-bench",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
