[package]
name = "clippo-core"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["diagnostics"]
diagnostics = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"

[lints]
workspace = true
