[package]
name = "clippo-platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clippo-core = { path = "../clippo-core" }

[lib]
path = "src/lib.rs"

[features]
default = []
macos = []
windows = []
linux = []

[lints]
workspace = true
